--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_oem_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_oem_passwords.yml
@@ -1,18 +1,3 @@
-- name: Set SYS Secret Name
-  set_fact:
-    secret_name: "{{ oemdb_secretsmanager_passwords['oemdb']['secret'] }}"
-  no_log: true
-
-- name: Get Existing SYS Password
-  import_role:
-    name: secretsmanager-passwords
-  vars:
-    secretsmanager_passwords: "{{ oemdb_secretsmanager_passwords }}"
-
-- name: Set Variable For SYS Password
-  set_fact:
-    sys_password: "{{ secretsmanager_passwords_dict['oemdb'].passwords['sys'] }}"
-
 - name: Check if the SYS Password Works
   script: get_sys_remote_lock.sh
   register: get_sys_primary_remote_lock
@@ -58,18 +43,19 @@
     # Always use this approach in case previous reset of the SYSMAN password has failed.
     # (Note non-standard successful return code of 1)
     - name: Change SYSMAN Password
-      shell: "{{ emctl_oem }} config oms -change_repos_pwd -use_sys_pwd -sys_pwd ${SYS_PASSWORD} -new_pwd ${NEW_PASSWORD}"
+      ansible.builtin.command: >
+        {{ emctl_script }}
+      environment:
+        ROTATE: OMS
       register: change_sysman_password
       failed_when: change_sysman_password.rc > 1
-      environment:
-        SYS_PASSWORD: "{{ sys_password }}"
-        NEW_PASSWORD: "{{ new_password }}"
 
     # We do not currently use the Management View user so the password can be set randomly
     - name: Change MGMT_VIEW Password
-      shell: "{{ emctl_oem }} config oms -change_view_user_pwd -sysman_pwd ${SYSMAN_PASSWORD} -auto_generate"
+      ansible.builtin.command: >
+        {{ emctl_script }}
       environment:
-        SYSMAN_PASSWORD: "{{ new_password }}"
+        ROTATE: MGMT_VIEW
 
     - name: Check Admin Server Status
       shell: '{{ emctl_oem }} status oms | grep "WebTier" | awk ''{print $NF}'''
@@ -94,12 +80,10 @@
         ansible_aws_ssm_timeout: 900
 
     - name: Update OEM_DB Named Credential
-      shell: |
-        . ~/.bash_profile
-        {{ emcli }} sync 1>/dev/null 2>&1 || ( {{ emcli }} login -username=sysman -password=${SYSMAN_PASSWORD} -force && {{ emcli }} sync ) 1>/dev/null 2>&1
-        {{ emcli }} modify_named_credential -cred_name=OEM_DB -cred_type=DBCreds -test -attributes="DBUserName:sysman;DBRole:Normal;DBPassword:${SYSMAN_PASSWORD}"
+      ansible.builtin.command: >
+        {{ emcli_script }}
       environment:
-        SYSMAN_PASSWORD: "{{ new_password }}"
+        EMCTL_COMMANDS: '{{ emcli }} modify_named_credential -cred_name=OEM_DB -cred_type=DBCreds -test -attributes="DBUserName:sysman;DBRole:Normal;DBPassword:${SYSMAN_PASSWORD}"'
       register: update_name_credential
       failed_when: update_name_credential.rc != 0
 # - name: Create New Password for Nodemanager
