Use orapki script

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_wallet_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_wallet_password.yml
@@ -1,15 +1,22 @@
-# The SYSTEM password is used for management of the Wallet
-# We require the old system password in order to do this.
-- name: Attempt to Reset the Wallet Password using ORAPKI
-  shell: |
-    . ~/.bash_profile
-    cd {{ path_to_wallet }}
-    orapki wallet change_pwd -wallet . -oldpwd "${BEFORE_PASSWORD}" -newpwd "${AFTER_PASSWORD}"
-  register: change_password
-  ignore_errors: true
-  environment:
-    BEFORE_PASSWORD: "{{ before_password }}"
-    AFTER_PASSWORD: "{{ after_password }}"
+- block:
+
+    - name: Copy Orapki script
+      template:
+        src: orapki_script.sh.j2
+        dest: "{{ stage }}/orapki_script.sh"
+        mode: "0700"
+
+    - name: Attempt to Reset the Wallet Password using Orapki Script
+      ansible.builtin.command: >
+        {{ stage }}/orapki_script.sh
+      register: change_password
+
+  always:
+
+    - name: Remove Orapki Script from Stage Area
+      file:
+        path: "{{ stage }}/orapki_script.sh"
+        state: absent
 
 # Do not use RESCUE section to trap errors changing the wallet password as this is a nested
 # block and the rescue section will be executed out of sequence with other hosts resulting
