Replace password variable tasks with script

--- a/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-dblink.yml
+++ b/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-dblink.yml
@@ -47,101 +47,27 @@
   register: drop_logon_trigger
   when: get_logon_trigger.stdout is search((dms_user | upper) + '_RESTRICT')
 
-- name: Check Existence of Database Link to the Primary Database
-  shell:
-    cmd: |
-      . ~/.bash_profile
-      sqlplus -s /nolog << EOF
-
-      connect {{ dms_user }}/${DMS_PASSWORD}
-
-      WHENEVER SQLERROR EXIT FAILURE
-      SET ECHO OFF HEAD OFF PAGES 0 FEED OFF SERVEROUTPUT ON
-
-      SELECT 'DB_LINK='||db_link
-      FROM   user_db_links
-      WHERE  db_link = 'AWSDMS_DBLINK';
-
-      EOF
+- name: Copy Dms Script To Primary Database
+  template:
+    src: dms_script.sh.j2
+    dest: /u02/stage/dms_script.sh
+    mode: "0700"
   delegate_to: "{{ delius_primary_host }}"
-  register: get_db_link
-  changed_when: false
+
+- name: Check Database Link Exists And Is Working On Primary Database
+  ansible.builtin.command: >
+    /u02/stage/dms_script.sh
   environment:
-    DMS_PASSWORD: "{{ dms_password.stdout }}"
-
-- name: Check If Database Link is Functional
-  shell:
-    cmd: |
-      . ~/.bash_profile
-      sqlplus -s /nolog << EOF
-
-      connect {{ dms_user }}/${DMS_PASSWORD}
-
-      WHENEVER SQLERROR EXIT FAILURE
-      SET ECHO OFF HEAD OFF PAGES 0 FEED OFF SERVEROUTPUT ON
-
-      SELECT *
-      FROM   dual@awsdms_dblink;
-
-      EOF
-  delegate_to: "{{ delius_primary_host }}"
+    STEP: CHECKDBLINK
   register: check_db_link
-  when: get_db_link.stdout is search('.*DB_LINK=AWSDMS_DBLINK.*')
   changed_when: false
-  environment:
-    DMS_PASSWORD: "{{ dms_password.stdout }}"
-
-- name: Drop Non-Functional Database Link
-  shell:
-    cmd: |
-      . ~/.bash_profile
-      sqlplus -s /nolog << EOF
-
-      connect {{ dms_user }}/${DMS_PASSWORD}
-
-      WHENEVER SQLERROR EXIT FAILURE
-      SET ECHO OFF HEAD OFF PAGES 0 FEED OFF SERVEROUTPUT ON
-
-      DROP DATABASE LINK awsdms_dblink;
-
-      EOF
   delegate_to: "{{ delius_primary_host }}"
-  register: drop_db_link
-  when:
-    - get_db_link.stdout is search('.*DB_LINK=AWSDMS_DBLINK.*')
-    - check_db_link.rc | default(0) > 0
-  environment:
-    DMS_PASSWORD: "{{ dms_password.stdout }}"
 
 - name: Create Database Link to the Primary Database
-  shell:
-    cmd: |
-      . ~/.bash_profile
-      sqlplus -s /nolog << EOF
-
-      WHENEVER SQLERROR EXIT FAILURE
-      SET ECHO OFF HEAD OFF PAGES 0 FEED OFF SERVEROUTPUT ON
-
-      connect / as sysdba
-
-      -- The DMS User does not normally have privileges to
-      -- create a database link so we grant this temporarily
-      GRANT CREATE DATABASE LINK TO {{ dms_user }};
-
-      connect {{ dms_user }}/${DMS_PASSWORD}
-
-      CREATE DATABASE LINK awsdms_dblink
-      CONNECT TO {{ dms_user }} IDENTIFIED BY "${DMS_PASSWORD}"
-      USING '{{ delius_primary_sid | upper }}';
-
-      connect / as sysdba
-
-      REVOKE CREATE DATABASE LINK FROM {{ dms_user }};
-
-      EOF
+  ansible.builtin.command: >
+    /u02/stage/dms_script.sh
+  environment:
+    STEP: CREATEDBLINK
   delegate_to: "{{ delius_primary_host }}"
   register: create_db_link
-  when: ( not (get_db_link.stdout is search('.*DB_LINK=AWSDMS_DBLINK.*')) )
-    or ( drop_db_link.stdout | default('') is search('.*Database link dropped..*') )
-  environment:
-    DMS_PASSWORD: "{{ dms_password.stdout }}"
+  when: check_db_link.stdout is search('DROPPEDDBLINK')
