--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -33,7 +33,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        environment: [delius-core-dev,delius-core-test,delius-mis-dev]
+        environment: [delius-mis-dev,delius-core-dev]
     #,delius-core-training,delius-core-stage,delius-core-preprod,delius-core-prod,delius-mis-stage,delius-mis-preprod,delius-mis-prod
     environment: ${{ matrix.environment }}-preapproved
     timeout-minutes: 1440
