--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -33,8 +33,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        environment: [delius-core-dev,delius-mis-dev,delius-core-test,delius-core-stage]
-    #,delius-core-training,delius-core-stage,delius-core-preprod,delius-core-prod,delius-mis-stage,delius-mis-preprod,delius-mis-prod
+        environment: [delius-core-dev,delius-mis-dev,delius-core-test,delius-core-stage,delius-mis-stage]
     environment: ${{ matrix.environment }}-preapproved
     timeout-minutes: 1440
     continue-on-error: true
