adapt to gdpr and merge

--- a/.github/workflows/delius-core-cp-helm-rds-data-refresh.yaml
+++ b/.github/workflows/delius-core-cp-helm-rds-data-refresh.yaml
@@ -39,13 +39,8 @@ jobs:
 
     - name: Stop ${{ github.event.inputs.destination_env }} Environment
       run: |
-        kubectl scale deployment alfresco-content-services-alfresco-cs-repository --replicas=0
-        kubectl scale deployment alfresco-content-services-alfresco-cs-share --replicas=0        
-        kubectl scale deployment alfresco-content-services-alfresco-search-enterprise-content --replicas=0
-        kubectl scale deployment alfresco-content-services-alfresco-search-enterprise-metadata --replicas=0
-        kubectl scale deployment alfresco-content-services-alfresco-search-enterprise-path --replicas=0
-        kubectl scale deployment alfresco-content-services-alfresco-search-enterprise-mediation --replicas=0
-        kubectl scale deployment alfresco-content-services-alfresco-router --replicas=0
+        kubectl scale deployment [gdpr deployment name here] --replicas=0
+        kubectl scale deployment [merge deployment name here] --replicas=0
 
   refresh-db:
     name: Refresh DB
@@ -165,12 +160,6 @@ jobs:
 
     - name: Start ${{ github.event.inputs.destination_env }} Environment
       run: |
-        HELM_VALUES=$(helm get values alfresco-content-services -o json)
 
-        kubectl scale deployment alfresco-content-services-alfresco-cs-repository --replicas=$(echo $HELM_VALUES | jq '.repository.replicaCount')
-        kubectl scale deployment alfresco-content-services-alfresco-cs-share --replicas=$(echo $HELM_VALUES | jq '.share.replicaCount')
-        kubectl scale deployment alfresco-content-services-alfresco-search-enterprise-content --replicas=1
-        kubectl scale deployment alfresco-content-services-alfresco-search-enterprise-metadata --replicas=1
-        kubectl scale deployment alfresco-content-services-alfresco-search-enterprise-path --replicas=1
-        kubectl scale deployment alfresco-content-services-alfresco-search-enterprise-mediation --replicas=1
-        kubectl scale deployment alfresco-content-services-alfresco-router --replicas=1
+        kubectl scale deployment [gdpr deployment name here] --replicas=1
+        kubectl scale deployment [merge deployment name here] --replicas=1
