--- a/playbooks/oracle_backup/validate_backup.yml
+++ b/playbooks/oracle_backup/validate_backup.yml
@@ -20,8 +20,8 @@
 
     - name: Set Environment Variables Required For Shell And Script Modules
       set_fact:
-        assume_role_name: "{{ secretsmanager_passwords['catalog'].assume_role_name }}"
-        secret_account_id: "{{ account_ids[secretsmanager_passwords['catalog'].account_name] }}"
+        assume_role_name: "{{ assume_role_name }}"
+        secret_account_id: "{{ account_ids[account_name] }}"
         secret: "{{ secretsmanager_passwords['catalog'].secret }}"
 
     # As we do not have a tnsnames.ora file on the standby we pick up the tnsnames definition for the catalog from the primary
