--- a/helm/refresh-db/templates/job.yaml
+++ b/helm/refresh-db/templates/job.yaml
@@ -62,7 +62,7 @@ spec:
             - name: SRC_DB_NAME
               valueFrom:
                 secretKeyRef:
-                  name: rds-instance-output
+                  name: rds-instance-output-{{ .Values.component }}
                   key: DATABASE_NAME
             - name: SRC_DB_USER
               valueFrom:
